/**
 * # Block Node Connections
 * A representation of the configuration for connecting to a set of block nodes.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */

syntax = "proto3";

package com.hedera.hapi.network;

option java_package = "com.hedera.node.internal.network.legacy";
// <<<pbj.java_package = "com.hedera.node.internal.network">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * Configuration for a single block node connection.<br/>
 * This message delivers the information needed to stream blocks to a block node.
 */
message BlockNodeConfig {
    /**
     * The address of the block node.<br/>
     */
    string address = 1;

    /**
     * The port of the block node.<br/>
     */
    int32 port = 2;
}

/**
 * Overall connection configuration for block nodes.<br/>
 *
 * The BlockNodeConnectionInfo message SHOULD encapsulate all the information needed
 * for a consensus node to connect to a set of block nodes and stream blocks.
 */
message BlockNodeConnectionInfo {
    /**
     * A list of block node configurations.<br/>
     * This field SHALL list all block node configurations
     * to which the consensus node SHOULD connect.
     */
    repeated BlockNodeConfig nodes = 1;

    /**
     * The size of the batches of block items to be streamed to block nodes.<br/>
     */
    int32 block_item_batch_size = 2;
} 